opam-version: "2.0"
homepage:     "https://github.com/mirleft/ocaml-tls"
dev-repo:     "git+https://github.com/mirleft/ocaml-tls.git"
bug-reports:  "https://github.com/mirleft/ocaml-tls/issues"
doc:          "https://mirleft.github.io/ocaml-tls/doc"
author:       ["David Kaloper <david@numm.org>" "Hannes Mehnert <hannes@mehnert.org>" "Eric Ebinger <github@eric.theebingers.com>" "Calascibetta Romain <romain.calascibetta@gmail.com>"]
maintainer:   ["Hannes Mehnert <hannes@mehnert.org>" "David Kaloper <david@numm.org>"]
license:      "BSD-2-Clause"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.0"}
  "tls" {= version}
  "ptime" {>= "0.8.1"}
  "async" {>= "v0.16"}
  "async_unix" {>= "v0.16"}
  "core" {>= "v0.16"}
  "core_unix" {>= "v0.16"}
  "cstruct-async"
  "ppx_jane" {>= "v0.16"}
  "mirage-crypto-rng-async" {>= "1.0.0"}
]
tags: [ "org:mirage"]
synopsis: "Transport Layer Security purely in OCaml, Async layer"
description: """
Tls-async provides Async-friendly tls bindings
"""
x-maintenance-intent: [ "(latest)" ]
