opam-version: "2.0"
homepage:     "https://github.com/mirleft/ocaml-tls"
dev-repo:     "git+https://github.com/mirleft/ocaml-tls.git"
bug-reports:  "https://github.com/mirleft/ocaml-tls/issues"
doc:          "https://mirleft.github.io/ocaml-tls/doc"
author:       ["David Kaloper <david@numm.org>" "Hannes Mehnert <hannes@mehnert.org>"]
maintainer:   ["Hannes Mehnert <hannes@mehnert.org>" "David Kaloper <david@numm.org>"]
license:      "BSD-2-Clause"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.0"}
  "tls" {= version}
  "mirage-crypto-rng-lwt" {>= "0.11.0"}
  "x509" {>= "0.15.0"}
  "lwt" {>= "3.0.0"}
  "cmdliner" {>= "1.1.0"}
]
conflicts: [ "result" {< "1.5"} ]
tags: [ "org:mirage"]
synopsis: "Transport Layer Security purely in OCaml, Lwt layer"
description: """
Tls-lwt provides an effectful Tls_lwt module to be used with Lwt.
"""
