opam-version: "2.0"
name:         "tls"
homepage:     "https://github.com/mirleft/ocaml-tls"
dev-repo:     "git+https://github.com/mirleft/ocaml-tls.git"
bug-reports:  "https://github.com/mirleft/ocaml-tls/issues"
doc:          "https://mirleft.github.io/ocaml-tls/doc"
author:       ["David Kaloper <david@numm.org>" "Hannes Mehnert <hannes@mehnert.org>"]
maintainer:   ["Hannes Mehnert <hannes@mehnert.org>" "David Kaloper <david@numm.org>"]
license:      "BSD2"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "1.0"}
  "ppx_sexp_conv" {>= "v0.9.0"}
  "ppx_cstruct" {>= "3.0.0"}
  "cstruct" {>= "4.0.0"}
  "cstruct-sexp"
  "sexplib"
  "nocrypto" {>= "0.5.4"}
  "x509" {>= "0.9.0"}
  "domain-name" {>= "0.3.0"}
  "fmt"
  "cstruct-unix" {with-test & >= "3.0.0"}
  "ounit" {with-test & >= "2.2.0"}
  "lwt" {>= "3.0.0"}
  "ptime" {>= "0.8.1"}
]

tags: [ "org:mirage"]
synopsis: "Transport Layer Security purely in OCaml"
