(library
 (name testlib)
 (modules testlib)
 (libraries tls ounit2 cstruct-unix mirage-crypto-rng.unix)
 (optional))

(test
 (name unittestrunner)
 (package tls)
 (modules readertests readerwritertests writertests unittests unittestrunner)
 (libraries tls ounit2 cstruct-unix testlib))

(test
 (name key_derivation)
 (package tls)
 (modules key_derivation)
 (libraries tls mirage-crypto-rng.unix alcotest logs.fmt))

(test
 (name feedback)
 (modules feedback)
 (deps server.key server.pem)
 (libraries tls x509 testlib cmdliner fmt.cli logs.fmt fmt.tty logs.cli))
