(copy_files ../../certificates/*.crt)
(copy_files ../../certificates/*.key)
(copy_files ../../certificates/*.pem)

(mdx
  (package tls-eio)
  (deps
    server.pem
    server.key
    server-ec.pem
    server-ec.key
    (package tls-eio)
    (package mirage-crypto-rng-eio)
    (package eio_main)))

; "dune runtest" just does a quick run with random inputs.
;
; To run with afl-fuzz instead (make sure you have a compiler with the afl option on!):
;
; dune runtest
; mkdir input
; echo hi > input/foo
; cp certificates/server.{key,pem} .
; afl-fuzz -m 1000 -i input -o output ./_build/default/eio/tests/fuzz.exe @@
(test
  (package tls-eio)
  (libraries crowbar tls-eio eio.mock logs logs.fmt)
  (deps server.pem server.key)
  (name fuzz)
  (action (run %{test} --repeat 200)))
